[tool.poetry]
name = "urlstalker-resources"
version = "0.1.0"
description = "API for managing resources DB of URL stalker app"
authors = ["Jan Hein de Jong <janhein.dejong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.76.0"
SQLAlchemy = "^1.4.36"
uvicorn = "^0.17.6"
psycopg2 = "^2.9.3"
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
