[tool.poetry]
name = "urlstalker-resources"
version = "0.1.0"
description = "API for managing resources DB of URL stalker app"
authors = ["Jan Hein de Jong <janhein.dejong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.76.0"
SQLAlchemy = "^1.4.36"
uvicorn = "^0.17.6"
psycopg2 = "^2.9.3"
alembic = "^1.7.7"
pydantic = {extras = ["email"], version = "^1.9.1"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
autoflake = "^1.4"
isort = "^5.10.1"

[tool.pylint.MASTER]
extension-pkg-whitelist = "pydantic,alembic" 
disable = "missing-docstring" 
ignored-modules = "six.moves,_MovedItems,alembic.op" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
